bug fixes to links and some content

--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -34,7 +34,7 @@ custom_js:
     <h3>Examples of GUDMAP imaging data</h3>
 
     <div class="image-carousel">
-    {% include carousel.html %}
+    {% include carousel-gudmap.html %}
     </div>
 
       <p class="signup"><a href="http://eepurl.com/hyUyjD" class="btn btn-success" role="button">Join our announcements list!</a></p>
