--- a/resources/adult-mouse-penis-3d/index.html
+++ b/resources/adult-mouse-penis-3d/index.html
@@ -18,7 +18,6 @@ redirect_from:
 <strong>On this page:</strong>
 <ul>
   <li><a href="#intro">Introduction</a></li>
-  <li><a href="#download">Download Data</a></li>
   <li><a href="#mri-viewing-instructions">MRI Viewing Instructions</a></li>
   <li><a href="#viewing-tips">Viewing Tips</a></li>
 </ul>
@@ -56,12 +55,9 @@ the relationship of various structures. </p>
   Phillips TR, Wright DK, Gradie PE, Johnston LA, Pask AJ. <a href="https://www.karger.com/Article/Pdf/431010">A Comprehensive Atlas of the Adult Mouse Penis</a>. Sex Dev. 2015;9(3):162-72. doi: 10.1159/000431010. Epub 2015 Jun 19.
 </blockquote>
 
-<h2><a name="download" id="download" class="offset"></a>Download Data</h2>
-<p><a href="3D-MRI-Viewing.zip">Download ZIP file.</a> (33 MB)</p>
-
 <h2><a name="mri-viewing-instructions" id="mri-viewing-instructions" class="offset"></a>MRI Viewing Instructions</h2>
 <ol>
-<li><a href="=3D-MRI-Viewing.zip">Download and unzip the ZIP file</a> (33 MB).</li>
+<li><a href="3D-MRI-Viewing.zip">Download and unzip the ZIP file</a> (33 MB).</li>
 <li>Download and install ITK-SNAP: <a href="http://www.itksnap.org/pmwiki/pmwiki.php?n=Downloads.SNAP3">http://www.itksnap.org/pmwiki/pmwiki.php</a></li>
 <li>Open the program and in the top toolbar go to <code>File</code> &gt; <code>Open Main Image</code>, browse the above zip folder to locate the MRI Image labeled “Atlas.nii” in the &quot;ITK-SNAP Files&quot; folder. Then click <code>Next &gt;</code>, then click <code>Finish</code>.</li>
 <li>In the top toolbar go to <code>Segmentation</code> &gt; <code>Open Segmentation</code>.</li>
