--- a/resources/disease/index.html
+++ b/resources/disease/index.html
@@ -2,21 +2,9 @@
 layout: resources
 title: Disease Resource
 description: Links to websites useful for understanding genitourinary disease through studying gene expression and development.
-redirect_from:
-  - /disease/
 ---
 
-<p><strong>On this page:</strong></p>
-<ul>
-  <li>Query Disease-Gene Associations (Coming Soon)</li>
-  <li>Query Phenotype-Gene Associations (Coming Soon)</li>
-  <li><p><a href="http://gataca.cchmc.org/gataca/gudmap" target="_blank">The GATACA GUDMAP Gene Explorer</a> at Cincinnati Children's Hospital Medical Center:
-  A tool for the identification and analysis of genes responsible for functions and diseases of the genitourinary system.</p></li>
-</ul>
-
-<h2>About the GUDMAP Disease Resource</h2>
-
-<h3>Genitourinary gene expression, development and disease</h3>
+<h2>Genitourinary gene expression, development and disease</h2>
 
 <p>Studying gene expression in the genitourinary (GU) system is useful to understand GU disease. It supports our understanding of disease mechanisms. If we know that a particular disease affects the GU system we can look at which genes are expressed (or not expressed) in the affected GU tissues and structures. This helps us to better understand how mutations in these genes or disruptions in their expression can play a role in disease.</p>
 
@@ -24,9 +12,9 @@ redirect_from:
 
 <p>Studying development is important as some diseases can occur as a consequence of events that take place during development. Problems during development can result in the incorrect formation of structures, the consequences of which can lead to disease. For example, reduced nephron number may lead to the early onset of renal disease. Understanding development, in particular the role of stem cells, may also lead to future therapies based on regeneration.</p>
 
-<p>For more information go to the <a href="/resources/external-resources/#gu-disease">Genitourinary Disease</a> section of the Links page.</p>
+<p>For more information go to the <a href="/resources/tools/#genitourinary-disease">Genitourinary Disease</a> section of the "Community Tools" page.</p>
 
-<h3>About the Resource</h3>
+<h2>About the Resource</h2>
 
 <p>The development of the GUDMAP Disease Resource has involved obtaining disease-gene association, primarily from OMIM, and building this data into the GUDMAP database architecture. This has enabled the disease data to be integrated with the existing gene expression data which has enhanced GUDMAP as a research tool for genitourinary development and disease. </p>
 
