--- a/tutorials/urogenital-dev/reproductive-system/index.html
+++ b/tutorials/urogenital-dev/reproductive-system/index.html
@@ -2,9 +2,6 @@
 layout: tutorials
 title: Development of the Murine Reproductive System
 attribution: Provided by Matt Kaufman, University of Edinburgh. Other contributors are Jamie Davies, Peter Koopman, Melissa Little, Cathy Mendelsohn, Gen Yamada and Andrew McMahon.<br/><small>2010 (GUDMAP)</small>
-redirect_from:
-  - /About/Tutorial/DevMRS.html
-  - /tutorials/urogenital-dev/devmrs.html
 ---
 
 <div class="tutorial-gallery slider" data-slick='{"dots": true}'>
@@ -46,7 +43,7 @@ redirect_from:
 
     <h2><a name="staging" id="staging" class="anchor"></a>A Note About Staging</h2>
 
-    <p>The definitions of Theiler stages used in this essay, and their relationship to days post-coitum (dpc), are those that appear on the <a href="http://www.emouseatlas.org/emap/ema/theiler_stages/StageDefinition/stagedefinition.html">EMAP website</a>.</p>
+    <p>The definitions of Theiler stages used in this essay, and their relationship to days post-coitum (dpc), are those that appear on the EMAP website (no longer active, but you can <a href="https://www.ncbi.nlm.nih.gov/projects/Jax_GSA/IMGC2005_Workshop/emage_tutorial.pdf">find the paper here</a>).</p>
     <p>In this document, each Theiler stage is identified with one 'average' age, and a range of variation of real ages, centring on this average, that can be seen when real developing embryos are studied. These appear below. For simplicity, the rest of this essay quotes only the average age.</p>
    <div>
    <div style="float: left; padding: 5px;">
