--- a/events/index.html
+++ b/events/index.html
@@ -3,7 +3,7 @@ layout: default
 title: ATLAS-D2K Events
 ---
 
-The following events represent internal meetings for the GUDMAP and RBK consortia:
+<p>The following events represent internal meetings for the GUDMAP and RBK consortia:</p>
 
 <ul>
   {% assign sorted_events = site.events | sort: "start_date" %}
@@ -19,21 +19,7 @@ The following events represent internal meetings for the GUDMAP and RBK consorti
   {% endfor %}
 </ul>
 
-<!--
-<ul>
-  {% for event in site.events %}
-     <li>
-        <h3><a href="{{ event.url }}">{{ event.title }}</a></h3>
-        <p>Date:
-           {{ event.start_date | date: "%B %d, %Y" }} -
-           {{ event.end_date | date: "%B %d, %Y" }}
-        </p>
-        <p>Location: {{ event.location }}</p>
-     </li>
-  {% endfor %}
 
-</ul>
--->
 <!-- add this after 10/24/23
 <h2>Past Events</h2>
 -->
