--- a/resources/genital-tubercule-atlas/index.html
+++ b/resources/genital-tubercule-atlas/index.html
@@ -2,8 +2,6 @@
 layout: resources
 title: Mouse Genital Tubercule Reference Models
 description: A set of 3D reference models with and without the gene-expression patterns for the marker gene shh.
-redirect_from:
-  - /resources/opt/
 ---
 
 <!-- Highslide Functionalities added by Koosum on 15 Sep 2015 -->
@@ -48,9 +46,9 @@ redirect_from:
          });
 </script>
 
-<p><em>Provided by <a href="/projects/gudmap3/cohn-group/">Martin J. Cohn Lab</a>, University of Florida</em> <br/><small>March 2013 (GUDMAP)</small></p>
+<p><em>Provided by <a href="/gudmap/projects/gudmap3/cohn-group/">Martin J. Cohn Lab</a>, University of Florida</em> <br/><small>March 2013 (GUDMAP)</small></p>
 
-<p class="lead">The atlas below displays a set of 3D reference models with and without the gene-expression patterns for the marker gene <a href="https://www.gudmap.org/chaise/record/#2/Common:Gene/RID=Q-4FR4">Shh (sonic hedgehog)</a>. </p>
+<p class="lead">The atlas below displays a set of 3D reference models with and without the gene-expression patterns for the marker gene <a href="/chaise/record/#2/Common:Gene/RID=Q-4FR4">Shh (sonic hedgehog)</a>. </p>
 
 <p>Click on the links in the table to view the available reference models. Note the marker gene models will be spatially mapped to the wild-type embryos to enable comparison of new data against the reference pattern.</p>
 
