fixes made while checking links

--- a/gudmap/publications/index.html
+++ b/gudmap/publications/index.html
@@ -2,6 +2,7 @@
 layout: gudmap/page
 title: GUDMAP Publications
 tag: pubs
+published: false
 ---
 
 <p class="lead">The following are published journal articles based on data generated for the GUDMAP Consortium.</p>
