--- a/rebuildingakidney/about/index.html
+++ b/rebuildingakidney/about/index.html
@@ -104,7 +104,7 @@ title: About RBK
 <h2><a name="patients" class="anchor"></a>For patients visiting this site</h2>
 <p>(Re)Building a Kidney is a basic research project and we are not currently directly involved with patients at this point.  However, for information that may be of use to you, we suggest visiting the following resources from the <a href="http://www.isscr.org">International Society for Stem Cell Research (ISSCR)</a>:
     <ul>
-      <li><a href="http://www.isscr.org/about-stem-cells">Learn About Stem Cells</a></li>
+      <li><a href="https://www.isscr.org/patients">Learn About Stem Cells</a></li>
       <li><a href="http://www.closerlookatstemcells.org/patient-resources/">Patient Handbook on Stem Cell Therapies</a></li>
     </ul>
   </p>
