--- a/rebuildingakidney/projects/cell-specific-novel-therapies/index.html
+++ b/rebuildingakidney/projects/cell-specific-novel-therapies/index.html
@@ -31,7 +31,7 @@ title: Cell specific delivery of novel therapies to enhance glomerular regenerat
 			<div class="pi-section">
 				<div class="pi personnel">
 					<p><strong>Benjamin S. Freedman</strong> (PI)<br>
-		  				<span class="inst"><a href="http://www.freedmanlab.com/">University of Washington</a></span></p>
+		  				<span class="inst">University of Washington</span></p>
 				</div>
 			</div>
 		</div>
