--- a/rebuildingakidney/projects/index.html
+++ b/rebuildingakidney/projects/index.html
@@ -6,21 +6,24 @@ tag: projects
 
 
 
-<h2>Phase 2 Projects (Ongoing)</h2>
-
+<h2>Phase 2 Projects (Active)</h2>
+<h3>Projects with a focus on Repair/Regeneration</h3>
 <ul>
-	<li><a href="synthetic-kidney/">The Synthetic Kidney: A Revolutionary Solution for the Shortage of Kidneys for Transplantation<br/> <small>Zhongwei Li, <em>University of Southern California</em></small></a></li>
-	<li><a href="integrating-ub-collecting-systems/">Integrating UB collecting systems into hPSC-derived kidney organoids<br/> <small>Kyle McCracken, <em>Cincinnatti Children's</em></small></a></li>
-	<li><a href="stepwise-developmental-mimicry/">Stepwise developmental mimicry generates proximal tubules in organoids<br/> <small>Nils Lindstrom, <em>University of Southern California</em></small></a></li>
-	<li><a href="single-nuclei-multiome/">Single-nuclei multiome atlas for a mammalian model of kidney regeneration<br/> <small>Elizabeth Nguyen, <em>Seattle Children's</em></small></a></li>
 	<li><a href="aki-therapeutics/">AKI Therapeutics<br/> <small>Neil Hukriede (Contact PI), <em>University of Pittsburgh</em>; Alan Davidson, <em>University of Auckland</em>; Mark De Caestecker, <em>Vanderbilt University</em>; Donna Huryn, <em>University of Pittsburgh</em></small></a></li>
-	<li><a href="extracellular-matrix-scaffolds/">Building Extracellular Matrix Scaffolds to Induce Nephron Development<br/> <small>Jason A. Wertheim, <em>University of Arizona</em></small></a></li>
 	<li><a href="cell-specific-novel-therapies/">Cell-specific Delivery of Novel Therapies to Enhance Glomerular Regeneration and Repair<br/> <small>Stuart Shankland (Contact PI), <em>University of Washington</em>; Benjamin J. Freedman, <em>University of Washington</em>; James M. Roberts, <em>Lumen Bioscience</em>; Oliver Wessely, <em>Cleveland Clinic</em></small></a></li>
-	<li><a href="rbk-coordinating-center/">Coordinating Center<br/> <small>Carl Kesselman (Contact PI), <em>University of Southern California/Information Sciences Institute</em>; M. Todd Valerius, <em>Brigham and Women’s Hospital/Harvard Medical School</em></small></a></li>
+	<li><a href="integrating-ub-collecting-systems/">Integrating UB collecting systems into hPSC-derived kidney organoids<br/> <small>Kyle McCracken, <em>Cincinnatti Children's</em></small></a></li>
+	<li><a href="single-cell-analysis-kidney-repair/">Single-cell Analysis to Promote Kidney Repair<br/> <small>Benjamin D. Humphreys (Contact PI), <em>Washington University in St. Louis</em>; Junhyong Kim, <em>University of Pennsylvania</em>; Andrew McMahon, <em>University of Southern California</em></small></a></li>
+	<li><a href="single-nuclei-multiome/">Single-nuclei multiome atlas for a mammalian model of kidney regeneration<br/> <small>Elizabeth Nguyen, <em>Seattle Children's</em></small></a></li>
+	<li><a href="stepwise-developmental-mimicry/">Stepwise developmental mimicry generates proximal tubules in organoids<br/> <small>Nils Lindstrom, <em>University of Southern California</em></small></a></li>
+</ul>
+
+<h3>Projects with a Focus on Building</h3>
+<ul>
+	<li><a href="extracellular-matrix-scaffolds/">Building Extracellular Matrix Scaffolds to Induce Nephron Development<br/> <small>Jason A. Wertheim, <em>University of Arizona</em></small></a></li>
 	<li><a href="engineering-functional-kidneys/">Engineering Functional Kidneys<br/> <small>Jennifer Lewis (Contact PI), <em>Harvard University</em>; Ryuji Morizane, <em>Harvard University</em>; Lisa Satlin, <em>Icahn School of Medicine</em></small></a></li>
 	<li><a href="functional-renal-engraftment/">Functional Renal Engraftment<br/> <small>Iain Drummond (Contact PI), <em>Mount Desert Island Biological Laboratory</em>; Leif Oxburgh, <em>The Rogosin Institute</em>; Denise Marciano, <em>University of Texas, Southwestern</em></small></a></li>
 	<li><a href="forming-kidney-map/">Kidney Microphysiological Analysis Platforms (MAP) to Optimize Function and Model Disease<br/> <small>Joseph Bonventre (Contact PI), <em>Brigham and Women's Hospital</em>; Luke Lee, <em>Brigham and Women's Hospital</em>; Jennifer Lewis, <em>Harvard University</em></small></a></li>
-	<li><a href="single-cell-analysis-kidney-repair/">Single-cell Analysis to Promote Kidney Repair<br/> <small>Benjamin D. Humphreys (Contact PI), <em>Washington University in St. Louis</em>; Junhyong Kim, <em>University of Pennsylvania</em>; Andrew McMahon, <em>University of Southern California</em></small></a></li>
+	<li><a href="synthetic-kidney/">The Synthetic Kidney: A Revolutionary Solution for the Shortage of Kidneys for Transplantation<br/> <small>Zhongwei Li, <em>University of Southern California</em></small></a></li>
 	<li><a href="visualizing-interactions-implanted-organoids/">Visualizing Vascularization and Cell Interactions in Implanted Organoids<br/> <small>Leif Oxburgh (Contact PI), <em>The Rogosin Institute</em>; Ondine Cleaver, <em>University of Texas, Southwestern</em>; Tom Carroll, <em>University of Texas, Southwestern</em>; Denise Marciano, <em>University of Texas, Southwestern</em>; Bradley Yoder, <em>University of Alabama, Birmingham</em></small></a></li>
 </ul>
 
