--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -29,6 +29,8 @@ custom_js:
     <p class="indent">The main focus of the current GUDMAP4 phase is [expanding our understanding of human development of the genito-urinary system.]</p>
 
     <p class="indent">The GUDMAP tools, tutorials and database are a public resource funded by the <a href="https://www.nih.gov/">National Institutes of Health, USA</a>.</p>
+
+    <p><a href="/gudmap/about/">Learn more about GUDMAP here</a>.</p>
 </div>
   <div class="col-md-4 featured">
     <h3>Examples of GUDMAP imaging data</h3>
@@ -45,7 +47,7 @@ custom_js:
   <div class="row bottom">
 
     <div class="col-md-4">
-      <h3>Tutorials <small><em><a href="/tutorials/">View all</a></em></small></h3>
+      <h3>Featured Tutorials <small><em><a href="/tutorials/">View all</a></em></small></h3>
 
       <div class="media">
         <div class="media-left">
