updating Contact links in subnavs

--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -26,11 +26,9 @@ custom_js:
       <li>access to consortium generated data, unpublished and  published, via the ATLAS-D2K data repository.</li>
     </ul>
 
-    <p class="indent">The main focus of the current GUDMAP4 phase is [expanding our understanding of human development of the genito-urinary system.]</p>
+    <p class="indent">The main focus of the current GUDMAP4 phase is expanding our understanding of human development of the genito-urinary system.</p>
 
-    <p class="indent">The GUDMAP tools, tutorials and database are a public resource funded by the <a href="https://www.nih.gov/">National Institutes of Health, USA</a>.</p>
-
-    <p><a href="/gudmap/about/">Learn more about GUDMAP here</a>.</p>
+    <p class="indent">The GUDMAP tools, tutorials and database are a public resource funded by the <a href="https://www.nih.gov/">National Institutes of Health, USA</a>. <a href="/gudmap/about/">Learn more about GUDMAP here</a>.</p>
 </div>
   <div class="col-md-4 featured">
     <h3>Examples of GUDMAP imaging data</h3>
