correcting some links into chaise - styles to override treeview

--- a/rebuildingakidney/index.html
+++ b/rebuildingakidney/index.html
@@ -23,7 +23,7 @@ title: (Re)Building A Kidney (RBK) Consortium
                 <i class="fa fa-database fa-fw cta-icon"></i>
 
                 <ul class="fa-ul">
-                  <li><i class="fa-li fa fa-arrow-circle-right"></i><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEANUKTTABtCALzAAXQiggB9BqLRQAnlIBmAaxwKQAXQC+bUOlFk0FBNXpNWHbrwHCxE6Tb6CR4yVLoAHL4KwOPNQ1tPWoASQARbQ4IFFEpCDR+fjhRDDQcHV0gA?pcid=static/home">scRNA-Seq Visualizations</a>
+                  <li><i class="fa-li fa fa-arrow-circle-right"></i><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEANUKTTABtCALzAAXQiggB9BqLRQAnlIBmAaxwKQAXQC+bUOlFk0FBNXpNWHbrwHCxE6Tb6CR4yVLoAHL4KwOPNQ1tPWoASQARbQ4IFFEpCDR+fjhRDDQcHV0gA">scRNA-Seq Visualizations</a>
                   </li>
                   <li><i class="fa-li fa fa-arrow-circle-right"></i><a href="/chaise/recordset/#2/Protocol:Protocol/Consortium=RBK?pcid=static/home">Lab Protocols</a>
                   </li>
