adding more specific citation instructions

--- a/resources/cell-lines/index.html
+++ b/resources/cell-lines/index.html
@@ -11,7 +11,7 @@ title: Request iPSC Cell Lines
 
 <h2>Costs</h2>
 
-<p>The cost of obtaining Human Induced Pluripotent Stem Cells (HiPSCs) is now covered by subsidies by the Kidney Translational Research Center (KTRC), ATLAS D2K (U24DK135157) and WU-PCEN (P50DK133943) grants. These sources should be cited in publications and presentations.</p>
+<p>The cost of obtaining Human Induced Pluripotent Stem Cells (HiPSCs) is now covered by subsidies by the Kidney Translational Research Center (KTRC), ATLAS D2K (U24DK135157) and WU-PCEN (P50DK133943) grants. These sources should be cited in publications and presentations (see "Acknowledgements" section for full citation information).</p>
 
 <p>We will now be able to offer the first vial of each human iPSC cell lines at no charge and the second vial of the same cell line for $250.00.</p>
 
@@ -37,3 +37,12 @@ title: Request iPSC Cell Lines
 </ol>
 
 <p class="note">Please allow 4-6 weeks for the entire process of requesting, approvals, and shipping.</p>
+
+<h2>Acknowledging Use of Cell Lines</h2>
+
+<p>Please cite the following in your publications and presentations: </p>
+
+<ul>
+  <li>Made possible by the Kidney Translational Research Center (KTRC) and the following grants: , ATLAS D2K (U24DK135157) and WU-PCEN (P50DK133943).</li>
+  <li>Also please cite the following RBK publication: Oxburgh L, et al. (Re)Building a Kidney. J Am Soc Nephrol. 2017 Jan 17. pii: ASN.2016101077. </li>
+</ul>
