--- a/resources/cell-lines/index.html
+++ b/resources/cell-lines/index.html
@@ -44,5 +44,6 @@ title: Request iPSC Cell Lines
 
 <ul>
   <li>Made possible by the Kidney Translational Research Center (KTRC) and the following grants: , ATLAS D2K (U24DK135157) and WU-PCEN (P50DK133943).</li>
-  <li>Also please cite the following RBK publication: Oxburgh L, et al. (Re)Building a Kidney. J Am Soc Nephrol. 2017 Jan 17. pii: ASN.2016101077. </li>
+  <li>Also please cite the following RBK publication: <br/>
+    Oxburgh L, Carroll TJ, Cleaver O, Gossett DR, Hoshizaki DK, Hubbell JA, Humphreys BD, Jain S, Jensen J, Kaplan DL, Kesselman C, Ketchum CJ, Little MH, McMahon AP, Shankland SJ, Spence JR, Valerius MT, Wertheim JA, Wessely O, Zheng Y, Drummond IA. <strong>(Re)Building a Kidney. J Am Soc Nephrol. 2017 May;28(5):1370-1378. doi: 10.1681/ASN.2016101077</strong>. Epub 2017 Jan 17. PMID: 28096308; PMCID: PMC5407737. </li>
 </ul>
