--- a/gudmap/logos/index.html
+++ b/gudmap/logos/index.html
@@ -1,5 +1,5 @@
 ---
-layout: internal-sub
+layout: gudmap/page
 title: GUDMAP Logos
 date: '2017-04-07 16:50:58 -0400'
 date_gmt: '2013-04-07 22:50:58 -0400'
@@ -23,4 +23,3 @@ tags: []
     </p>
   </div>
 </div>
-
