--- a/events/index.html
+++ b/events/index.html
@@ -5,7 +5,7 @@ title: ATLAS-D2K Events
 
 {% assign current_date = site.time | date: '%s' %}
 
-<h2>Upcoming Events</h2>
+Here are upcoming scheduled events for the GUDMAP and RBK consortia:
 <ul>
   {% assign sorted_events = site.events | sort: "start_date" %}
   {% for event in sorted_events %}
@@ -22,7 +22,7 @@ title: ATLAS-D2K Events
     {% endif %}
   {% endfor %}
 </ul>
-
+<!--
 <h2>Past Events</h2>
 <ul>
   {% for event in sorted_events %}
@@ -39,3 +39,4 @@ title: ATLAS-D2K Events
     {% endif %}
   {% endfor %}
 </ul>
+-->
