--- a/resources/cell-lines/index.html
+++ b/resources/cell-lines/index.html
@@ -23,6 +23,8 @@ title: Request iPSC Cell Lines
 
 <p>Cell lines are stored in the ATLAS-D2K iPSC repository at Washington University's <a href="https://research.wustl.edu/core-facilities/ktrc/" target="_blank">Kidney Translational Research Center (KTRC)</a>.</p>
 
+<p class="note">Note for International Requests: The pricing for vials remains consistent globally. However, international shipping incurs higher costs. Typically, shipments are made via World Courier, known for reliability but higher expenses. Up to 3 cell lines can be shipped together, provided all necessary documentation is in order.
+  </p>
 
 <h2>Requesting a Cell Line</h2>
 
