adding new RFA for 2024 opp pool (narrowing content page)

--- a/rebuildingakidney/index.html
+++ b/rebuildingakidney/index.html
@@ -32,7 +32,7 @@ title: (Re)Building A Kidney (RBK) Consortium
                   </li>
                     -->
 
-                  <li><i class="fa-li fa fa-arrow-circle-right"></i><a href="/cell-lines/">iPSC Cell Lines</a>
+                  <li><i class="fa-li fa fa-arrow-circle-right"></i><a href="/resources/cell-lines/">iPSC Cell Lines</a>
                   </li>
                   <li><i class="fa-li fa fa-arrow-circle-right"></i><a href="/chaise/recordset/#2/Antibody:Antibody_Tests/Consortium=RBK?pcid=static/home">Antibody Validation</a>
                   </li>
