--- a/index.html
+++ b/index.html
@@ -213,19 +213,12 @@ custom_js:
 
     <h3>Funding Opportunities</h3>
     <ul class="posts">
-      <li><a href="/collaboration/op-pool/">Learn about Opportunity Pools</a></li>
+      <li><a href="/collaboration/op-pool/2024/">RFA for the ATLAS-D2K Opportunity Pool 2024</a></li>
       <li><a href="/collaboration/gudmap-collab/">Apply to be a GUDMAP Collaborating Group</a></li>
       <li><a href="/collaboration/rbk-collab/">Apply to be a RBK Collaborating Group</a></li>
     </ul>
 
     <h3>Upcoming Internal Events</h3>
-    <!-- original manual listing
-    <ul class="posts">
-      <li><a href="/events/rbk-fall-2023-retreat/">RBK Fall 2023 Retreat (Oct 23-24 in Silver Spring, MD)</a></li>
-      <li><a href="/events/gudmap-spring-2024-meeting/">GUDMAP 2024 Annual Meeting (April 24-25 in Bethesda, MD)</a></li>
-      <li><a href="/events/rbk-spring-2024-retreat/">RBK Spring 2024 Retreat (April 29-30 in Bethesda, MD)</a></li>
-    </ul>
-    -->
 
     <ul class="posts">
   {% assign current_date = 'now' | date: '%s' %}
