adding iframe for data types matrix

--- a/index.html
+++ b/index.html
@@ -207,6 +207,15 @@ custom_js:
             </div>
         </div>
 
+<!-- Display assays matrix -->
+
+<div class="row">
+      <iframe class="embed-responsive" name="resources-viewer" id="resources-viewer" style="border-style: none; border-color: inherit; border-width: 0px; " src="/deriva-webapps/matrix/?config=all-data-type-by-species">
+      </iframe>
+</div>
+
+
+
 <div class="row" id="community">
   <h2>Participating Consortia</h2>
   <div class="col-md-6" id="news-atlas">
