trying standard header and width/height

--- a/index.html
+++ b/index.html
@@ -207,16 +207,12 @@ custom_js:
             </div>
         </div>
 
-<!-- Display assays matrix
+<!-- Display assays matrix  -->
 
-<div class="row">
-      <iframe class="embed-responsive" name="resources-viewer" id="resources-viewer" style="border-style: none; border-color: inherit; border-width: 0px; " src="/deriva-webapps/matrix/?config=all-data-type-by-species">
-      </iframe>
-</div>
- -->
 <div class="row" id="matrix">
+  <h2>Data Types Matrix</h2>
   <div class="ratio ratio-4x3">
-      <iframe name="resources-viewer" id="resources-viewer" style="border-style: none; border-color: inherit; border-width: 0px; " src="/deriva-webapps/matrix/?config=all-data-type-by-species">
+      <iframe name="resources-viewer" id="resources-viewer" style="width: 700px; height: 720px; border-style: none; border-color: inherit; border-width: 0px; " src="/deriva-webapps/matrix/?config=all-data-type-by-species">
       </iframe>
   </div>
 </div>
