--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ custom_js:
 <div class="row" id="matrix">
   <h2>Data Types Matrix</h2>
   <div class="ratio ratio-4x3">
-      <iframe name="resources-viewer" id="resources-viewer" style="width: 700px; height: 720px; border-style: none; border-color: inherit; border-width: 0px; " src="/deriva-webapps/matrix/?config=all-data-type-by-species">
+      <iframe name="resources-viewer" id="resources-viewer" style="border-style: none; border-color: inherit; border-width: 0px; " src="/deriva-webapps/matrix/?config=all-data-type-by-species">
       </iframe>
   </div>
 </div>
