--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@ custom_js:
 
 <div class="row" id="matrix">
   <h2>Data Types Matrix</h2>
-  <div class="ratio ratio-4x3">
-      <iframe name="resources-viewer" id="resources-viewer" style="border-style: none; border-color: inherit; border-width: 0px; " src="/deriva-webapps/matrix/?config=all-data-type-by-species">
+  <div class="col-12">
+      <iframe name="resources-viewer" id="resources-viewer" style="border-style: none; border-color: inherit; border-width: 0px; width: 100%; height: 700px;" src="/deriva-webapps/matrix/?config=all-data-type-by-species">
       </iframe>
   </div>
 </div>
