--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ custom_js:
 <!-- Display assays matrix  -->
 
 <div class="row" id="matrix">
-  <h2>Data Types Matrix</h2>
+  <h2>Data Types by Species Matrix</h2>
   <div class="col-12">
       <iframe name="resources-viewer" id="resources-viewer" style="border-style: none; border-color: inherit; border-width: 0px; width: 100%; height: 710px;" src="/deriva-webapps/matrix/?config=all-data-type-by-species">
       </iframe>
