--- a/gudmap/projects/index.html
+++ b/gudmap/projects/index.html
@@ -10,7 +10,7 @@ title: GUDMAP Projects
 <ul class="projects-list">
 {% for project in site.data.gudmap.projects-g4 %}
 	<li><a href="/gudmap/projects/gudmap4/{{ project.slug}}/">{{project.project_title}}</a>  <small>({{project.pi}}, <em>{{project.institute}}</em>{% if project.copi != null %}
-    / {{project.copi}}, <em>{{project.coinstitute}}</em>{% elsif project.multipis != null %}{% for item in project.multipis %}  / {{item.multipi}}, <em>{{item.mpi-institute}}</em>{% endfor %}{% endif %})</small></li>
+    / {{project.copi}}, <em>{{project.coinstitute}}</em>{% elsif project.cocopi != null %}  / {{item.cocopi}}, <em>{{item.cocoinstitute}}</em>{% endif %})</small></li>
 {% endfor %}
 </ul>
 
