--- a/gudmap/projects/gudmap4/index.html
+++ b/gudmap/projects/gudmap4/index.html
@@ -9,7 +9,7 @@ The goal of this phase of GUDMAP is to establish a comprehensive understanding o
  <p>You can find the <strong><a href="gudmap4/GUDMAP-Project-Matrix.xlsx">projections of data coming from GUDMAP4 projects in this spreadsheet</a></strong>.</p>
 <ul class="projects-list">
 {% for project in site.data.gudmap.projects-g4 %}
-  <li><a href="/gudmap/projects/gudmap4/{{ project.slug}}/">{{project.project_title}}</a>  <small>({{project.pi}}, <em>{{project.institute}}</em>{% if project.copi != null %}
-    / {{project.copi}}, <em>{{project.coinstitute}}</em>{% elsif project.multipis != null %}{% for item in project.multipis %}  / {{item.multipi}}, <em>{{item.mpi-institute}}</em>{% endfor %}{% endif %})</small></li>
+<li><a href="/gudmap/projects/gudmap4/{{ project.slug}}/">{{project.project_title}}</a>  <small>({{project.pi}}, <em>{{project.institute}}</em>{% if project.copi != null %}
+  / {{project.copi}}, <em>{{project.coinstitute}}</em>{% endif %}{% if project.cocopi != null %}  / {{project.cocopi}}, <em>{{project.cocoinstitute}}</em>{% endif %})</small></li>
 {% endfor %}
 </ul>
