--- a/index.html
+++ b/index.html
@@ -207,57 +207,16 @@ custom_js:
             </div>
         </div>
 
-<div class="row" id="community">
-  <h2>Participating Consortia</h2>
-  <div class="col-md-6" id="news-atlas">
+<!-- Display assays matrix  -->
 
-    <h3>Funding Opportunities</h3>
-    <ul class="posts">
-      <li><a href="/collaboration/op-pool/2024/">RFA for the ATLAS-D2K Opportunity Pool 2024</a></li>
-      <li><a href="/collaboration/gudmap-collab/">Apply to be a GUDMAP Collaborating Group</a></li>
-      <li><a href="/collaboration/rbk-collab/">Apply to be a RBK Collaborating Group</a></li>
-    </ul>
-
-    <h3>Upcoming Internal Events</h3>
-
-    <ul class="posts">
-  {% assign current_date = 'now' | date: '%s' %}
-  {% assign sorted_events = site.events | sort: "start_date" %}
-  {% for event in sorted_events %}
-    {% assign event_start_date = event.start_date | date: '%s' %}
-    {% if event_start_date >= current_date %}
-      <li>
-        <a href="{{ event.url }}">{{ event.title }} in {{ event.location }}</a>
-      </li>
-    {% endif %}
-  {% endfor %}
-</ul>
-
-
-  </div>
-  <div class="col-md-6" id="consortiums">
-  <h3>ReBuilding A Kidney (RBK) and GUDMAP<br/>
-  <small>The ATLAS-D2K Center supports the data and resources of the RBK and GUDMAP Consortiums. Click an image to learn more.</small></h3>
-    <div class="consortium">
-      <a href="/rebuildingakidney/">
-        <img src="/assets/img/rbk-horizontal.png" alt="RBK Consortium" class="img-responsive">
-      </a>
-    </div>
-    <div class="consortium">
-      <a href="/gudmap/">
-        <img src="/assets/img/gudmap-horizontal.png" alt="GUDMAP Consortium" class="img-responsive">
-      </a>
-    </div>
-  </div>
-
-</div>
-
-<div class="row" id="feat-img">
-  <h2>Featured Imaging Data</h2>
-  <div class="image-carousel">
-  {% include carousel.html %}
+<div class="row" id="matrix">
+  <h2>Data Types by Species Matrix</h2>
+  <div class="col-12">
+      <iframe name="resources-viewer" id="resources-viewer" style="border-style: none; border-color: inherit; border-width: 0px; width: 100%; height: 710px;" src="/deriva-webapps/matrix/?config=all-data-type-by-species">
+      </iframe>
   </div>
 </div>
+
 
 <div class="row" id="shortcuts">
 <h2>Browse these shortcuts for GUDMAP and RBK data<br/>
@@ -327,6 +286,59 @@ custom_js:
 </div>
 
 
+</div>
+
+
+<div class="row" id="community">
+  <h2>Participating Consortia</h2>
+  <div class="col-md-6" id="news-atlas">
+
+    <h3>Funding Opportunities</h3>
+    <ul class="posts">
+      <li><a href="/collaboration/op-pool/2024/">RFA for the ATLAS-D2K Opportunity Pool 2024</a></li>
+      <li><a href="/collaboration/gudmap-collab/">Apply to be a GUDMAP Collaborating Group</a></li>
+      <li><a href="/collaboration/rbk-collab/">Apply to be a RBK Collaborating Group</a></li>
+    </ul>
+
+    <h3>Upcoming Internal Events</h3>
+
+    <ul class="posts">
+  {% assign current_date = 'now' | date: '%s' %}
+  {% assign sorted_events = site.events | sort: "start_date" %}
+  {% for event in sorted_events %}
+    {% assign event_start_date = event.start_date | date: '%s' %}
+    {% if event_start_date >= current_date %}
+      <li>
+        <a href="{{ event.url }}">{{ event.title }} in {{ event.location }}</a>
+      </li>
+    {% endif %}
+  {% endfor %}
+</ul>
+
+
+  </div>
+  <div class="col-md-6" id="consortiums">
+  <h3>ReBuilding A Kidney (RBK) and GUDMAP<br/>
+  <small>The ATLAS-D2K Center supports the data and resources of the RBK and GUDMAP Consortiums. Click an image to learn more.</small></h3>
+    <div class="consortium">
+      <a href="/rebuildingakidney/">
+        <img src="/assets/img/rbk-horizontal.png" alt="RBK Consortium" class="img-responsive">
+      </a>
+    </div>
+    <div class="consortium">
+      <a href="/gudmap/">
+        <img src="/assets/img/gudmap-horizontal.png" alt="GUDMAP Consortium" class="img-responsive">
+      </a>
+    </div>
+  </div>
+
+</div>
+
+<div class="row" id="feat-img">
+  <h2>Featured Imaging Data</h2>
+  <div class="image-carousel">
+  {% include carousel.html %}
+  </div>
 </div>
 
 <div class="row" id="featured-tools">
