--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ custom_js:
 
 <div class="row" id="matrix">
   <h2>Data Types Matrix</h2>
-  <p>Click a cell or labels along the axes to navigate to the corresponding datasets. Note that the -omics data numbers indicate Studies which include multiple Experiments with multiple Replicates.</p>
+  <p>Click a cell or labels along the axes to navigate to the corresponding datasets.<br/>Note that the -omics data numbers indicate Studies which include multiple Experiments with multiple Replicates.</p>
   <div class="col-12">
       <iframe name="resources-viewer" id="resources-viewer" style="border-style: none; border-color: inherit; border-width: 0px; width: 100%; height: 710px;" src="/deriva-webapps/matrix/?config=all-data-type-by-species">
       </iframe>
