updating list of opps on homepage

--- a/index.html
+++ b/index.html
@@ -294,11 +294,11 @@ custom_js:
   <h2>Participating Consortia</h2>
   <div class="col-md-6" id="news-atlas">
 
-    <h3>Funding Opportunities</h3>
+    <h3>Current Funding Opportunities</h3>
     <ul class="posts">
-      <li><a href="/collaboration/op-pool/2024/">RFA for the ATLAS-D2K Opportunity Pool 2024</a></li>
       <li><a href="/collaboration/gudmap-collab/">Apply to be a GUDMAP Collaborating Group</a></li>
       <li><a href="/collaboration/rbk-collab/">Apply to be a RBK Collaborating Group</a></li>
+      <li><a href="/collaboration/">View all opportunities</a></li>
     </ul>
 
     <h3>Upcoming Internal Events</h3>
