--- a/index.html
+++ b/index.html
@@ -206,7 +206,17 @@ custom_js:
                 </div>
             </div>
         </div>
+        
+<!-- Display assays matrix -->
 
+<div class="row" id="matrix">
+  <h2>Data Types Matrix</h2>
+  <p class="center-text">Click a cell or labels along the axes to navigate to the corresponding datasets.<br/>Note that the -omics data numbers indicate Studies which include multiple Experiments with multiple Replicates.</p>
+  <div class="col-12">
+      <iframe name="resources-viewer" id="resources-viewer" style="border-style: none; border-color: inherit; border-width: 0px; width: 100%; height: 710px;" src="/deriva-webapps/matrix/?config=all-data-type-by-species">
+      </iframe>
+  </div>
+</div>
 
 <div class="row" id="shortcuts">
 <h2>Browse these shortcuts for GUDMAP and RBK data<br/>
