another batch of link fixes

--- a/gudmap/projects/gudmap4/index.html
+++ b/gudmap/projects/gudmap4/index.html
@@ -6,7 +6,7 @@ title: GUDMAP4 Projects
 <h3>GUDMAP 4</h3>
 <p><em>Funding period: 2021 through 2026 (<a href="https://grants.nih.gov/grants/guide/rfa-files/RFA-DK-20-013.html">RFA-DK-20-013</a>)<br/>
 The goal of this phase of GUDMAP is to establish a comprehensive understanding of kidney and lower urinary tract development and maturation to inform the study of tissue maturation and aging, organ dysgenesis and disease, and ultimately organ repair and regeneration.</em></p>
- <p>You can find the <strong><a href="gudmap4/GUDMAP-Project-Matrix.xlsx">projections of data coming from GUDMAP4 projects in this spreadsheet</a></strong>.</p>
+ <p>You can find the <strong><a href="GUDMAP-Project-Matrix.xlsx">projections of data coming from GUDMAP4 projects in this spreadsheet</a></strong>.</p>
 <ul class="projects-list">
 {% for project in site.data.gudmap.projects-g4 %}
 <li><a href="/gudmap/projects/gudmap4/{{ project.slug}}/">{{project.project_title}}</a>  <small>({{project.pi}}, <em>{{project.institute}}</em>{% if project.copi != null %}
