updating GUDMAP Who we are text

--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -14,21 +14,20 @@ custom_js:
   <div class="col-md-8 featured" id="whoweare">
     <h3>Who We Are</h3>
 
-    <p class="indent">Since its inception, GUDMAP has focused on the kidney, lower urinary tract and nociceptors (pain receptors) and associated cell types in pain processing of the urinary tract and pelvic region.</p>
-
     <p class="indent">The <strong>GenitoUrinary Development Molecular Anatomy Project (GUDMAP)</strong> is a consortium of laboratories working to provide the scientific and medical community with curated data and tools to facilitate research on the GenitoUrinary (GU) tract. The key components are:</p>
+
+    <p class="indent">Since its inception, GUDMAP has focused on the urogenital and urinary tract (kidney, ureter, bladder and urethra) regions of human, mouse and other model organisms.</p>
 
     <ul>
       <li>a molecular atlas of gene expression for the developing and mature organs of the human and mouse GU tract;</li>
       <li>a high resolution molecular anatomy that highlights development of the GU system;</li>
-      <li>mouse strains to facilitate developmental and functional studies within the GU system;</li>
       <li>tutorials describing GU organogenesis and innervation; and</li>
       <li>access to consortium generated data, unpublished and  published, via the ATLAS-D2K data repository.</li>
     </ul>
 
-    <p class="indent">The main focus of the current GUDMAP4 phase is expanding our understanding of human development of the genito-urinary system.</p>
+    <p class="indent">The goal of the <a href="/gudmap/projects/">latest phase of GUDMAP (GUDMAP 4)</a> is to establish a comprehensive understanding of kidney and lower urinary tract development and maturation to inform the study of tissue maturation and aging, organ dysgenesis and disease, and ultimately organ repair and regeneration.  </p>
 
-    <p class="indent">The GUDMAP tools, tutorials and database are a public resource funded by the <a href="https://www.nih.gov/">National Institutes of Health, USA</a>. <a href="/gudmap/about/">Learn more about GUDMAP here</a>.</p>
+    <p class="indent">The GUDMAP tools, tutorials and database are a public resource funded by the <a href="https://www.nih.gov/">National Institutes of Health, USA</a>.</p>
 </div>
   <div class="col-md-4 featured">
     <h3>Examples of GUDMAP imaging data</h3>
