--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -14,9 +14,7 @@ custom_js:
   <div class="col-md-8 featured" id="whoweare">
     <h3>Who We Are</h3>
 
-    <p class="indent">The <strong>GenitoUrinary Development Molecular Anatomy Project (GUDMAP)</strong> is a consortium of laboratories working to provide the scientific and medical community with curated data and tools to facilitate research on the GenitoUrinary (GU) tract. The key components are:</p>
-
-    <p class="indent">Since its inception, GUDMAP has focused on the urogenital and urinary tract (kidney, ureter, bladder and urethra) regions of human, mouse and other model organisms.</p>
+    <p class="indent">The <strong>GenitoUrinary Development Molecular Anatomy Project (GUDMAP)</strong> is a consortium of laboratories working to provide the scientific and medical community with curated data and tools to facilitate research on the GenitoUrinary (GU) tract. Since its inception, GUDMAP has focused on the urogenital, kidney and urinary tract (ureter, bladder and urethra) regions of human, mouse and other model organisms. The key components are:</p>
 
     <ul>
       <li>a molecular atlas of gene expression for the developing and mature organs of the human and mouse GU tract;</li>
