styling the bullets quickly

--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -16,7 +16,7 @@ custom_js:
 
     <p class="indent">The <strong>GenitoUrinary Development Molecular Anatomy Project (GUDMAP)</strong> is a consortium of laboratories working to provide the scientific and medical community with curated data and tools to facilitate research on the GenitoUrinary (GU) tract. Since its inception, GUDMAP has focused on the urogenital, kidney and urinary tract (ureter, bladder and urethra) regions of human, mouse and other model organisms. The key components are:</p>
 
-    <ul>
+    <ul style="padding-left: 40px;font-size: 18px;">
       <li>a molecular atlas of gene expression for the developing and mature organs of the human and mouse GU tract;</li>
       <li>a high resolution molecular anatomy that highlights development of the GU system;</li>
       <li>tutorials describing GU organogenesis and innervation; and</li>
