Fixing news, updating publications, cleanup
And fixes in gudmap minisite to include responsiveness updates for mobile nav

--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -8,7 +8,7 @@ custom_js:
 ---
 
 
-<div class="container-fluid content home" id="gudmap">
+<div class="container-fluid content gud-home">
 <div class="row">
   <h1 class="tagline">The GenitoUrinary Development Molecular Anatomy Project (GUDMAP) provides data and tools<br/> that facilitate research on the GenitoUrinary (GU) tract for the scientific and medical community.</h1>
   <div class="col-md-8 featured" id="whoweare">
