--- a/rebuildingakidney/index.html
+++ b/rebuildingakidney/index.html
@@ -4,7 +4,7 @@ tag:
 title: (Re)Building A Kidney (RBK) Consortium
 ---
 
-<div class="home" id="rbk">
+<div class="home">
   <div class="home-main">
     <div class="container content-inner">
       <h1 id="home-head">Welcome to the RBK Consortium</h1>
