--- a/gudmap/projects/index.html
+++ b/gudmap/projects/index.html
@@ -53,7 +53,7 @@ Main focus was the kidney, also minor focus on reproductive system, bladder, pel
 <ul>
 <li><a href="/gudmap/projects/gudmap1/capel-group/">Blanche Capel</a></li>
   <li><a href="/gudmap/projects/gudmap1/gaido-group/">Kevin Gaido</a></li>
-  <li><a href="/gudmap/projects/gudmap1/davidson-group/">Duncan Davidson (Editorial Office and Database Core)</a></li>
+  <li><a href="/gudmap/projects/gudmap1/edinburgh-group/">Edinburgh Group (Editorial Office and Database Core)</a></li>
   <li><a href="/gudmap/projects/gudmap1/lessard-group/">Jim Lessard</a></li>
   <li><a href="/gudmap/projects/gudmap1/little-group/">Melissa Little</a></li>
   <li><a href="/gudmap/projects/gudmap1/mcmahon-group/">Andy McMahon</a></li>
