note about cell lines resource expiring

--- a/resources/cell-lines/index.html
+++ b/resources/cell-lines/index.html
@@ -3,6 +3,9 @@ layout: resources
 title: Request iPSC Cell Lines
 ---
 
+<p class="bg-warning"><strong>The subsidy for access to this resource expires summer 2024.</strong>
+</p>
+
 <p>ATLAS-D2K human iPSC <a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line">parental</a> and <a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line">reporter</a> lines are available by request to the research community.</p>
 
 <p class="note">We are now able to offer the first vial of each human iPSC cell lines at no charge and the second vial of the same cell line for $250.00. The recipient will be responsible for shipping costs. This requires membership in <a href="https://pcen.wustl.edu/" target="_blank">WU-PCEN</a> (see below for details).</p>
