v1 gudmap homepage refresh

--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -11,6 +11,40 @@ custom_js:
 <div class="container-fluid content gud-home">
 <div class="row">
   <h1 class="tagline">The GenitoUrinary Development Molecular Anatomy Project (GUDMAP) provides data and tools<br/> that facilitate research on the GenitoUrinary (GU) tract for the scientific and medical community.</h1>
+  <!--
+  <p class="hotlinks"><a href="https://informatics-isi-edu.github.io/atlas-d2k-docs/docs/querying-the-atlas-d2k-data-browser/" target="_blank">Learn How to Query Data</a> | <a href="/tutorials/">Explore Tutorials</a> | <a href="/resources/">Find Resources</a></p>
+-->
+  <div class="col-sm-12 col-md-12 gud-cards">
+
+        <div class="col-sm-12 col-md-4">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <h3><a href="https://informatics-isi-edu.github.io/atlas-d2k-docs/docs/querying-the-atlas-d2k-data-browser/" target="_blank">How to Query Data</a></h3>
+            <a href="https://informatics-isi-edu.github.io/atlas-d2k-docs/docs/querying-the-atlas-d2k-data-browser/" target="_blank">
+<img class="media-object" src="/assets/img/query-example.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <h3><a href="/tutorials/">GU Tutorials</a></h3>
+              <a href="/tutorials/"><img class="media-object" src="/assets/img/tutorials/TS21_WMISH_Mventral_crop.jpg" alt="urogenital system at approximately TS21"></a>
+
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <h3><a href="/resources/">Resources</a></h3>
+              <a href="/resources/">
+                <img class="media-object" src="/assets/img/MC_OPT_030512_32_large_1.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
   <div class="col-md-8 featured" id="whoweare">
     <h3>Who We Are</h3>
 
