--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -10,6 +10,7 @@ description: GUDMAP provides useful tutorials for students and newcomers to geni
 
   <!-- List group -->
   <ul class="list-group">
+    <li class="list-group-item"><a href="https://informatics-isi-edu.github.io/atlas-d2k-docs/docs/querying-the-atlas-d2k-data-browser/" target="_blank">Querying the Data Browser</a></li>
     <li class="list-group-item"><a href="/tutorials/kidney-dev/">Development of the Kidney in Mouse and Human</a></li>
     <li class="list-group-item"><a href="/tutorials/innervation/">Lower Urinary Tract Innervation and its Development</a></li>
     <li class="list-group-item"><a href="/tutorials/prostate-dev/">Prostate Development</a></li>
