--- a/index.html
+++ b/index.html
@@ -8,45 +8,6 @@ custom_js:
   - jquery.colorbox
 ---
 
-<div class="row homeBanner">
-
-  <div class="col-md-2">
-
-  </div>
-
-  <div class="col-md-8">
-    <div class="formBlock">
-        <form class="search search-form" id="main-search">
-          <div class="input-group">
-            <input type="text" class="form-control" name="search_term" placeholder="Search data in ATLAS-D2K">
-            <span class="input-group-btn">
-              <button class="btn btn-default" type="submit">
-                <i class="fa fa-search" aria-hidden="true"></i>
-              </button>
-            </span>
-          </div>
-          <div class="search-panel">
-            <input type="radio" id="gene" name="search_param" value="gene"
-                   checked>
-            <label for="gene">GENE</label>
-            <input type="radio" id="anatomy" name="search_param" value="anatomy"
-                   >
-            <label for="anatomy">ANATOMY</label>
-            <input type="radio" id="species" name="search_param" value="species"
-                   >
-            <label for="species">SPECIES</label>
-            <input type="radio" id="proteins" name="search_param" value="proteins"
-                   >
-            <label for="proteins">PROTEIN</label>
-          </div>
-        </form>
-    </div>
-  </div>
-
-  <div class="col-md-2">
-
-  </div>
-</div>
 
 
 <div class="container-fluid content home">
@@ -73,13 +34,12 @@ custom_js:
                         <i class="stat-icon fa-solid fa-flask"></i>
                         <div>
                             <h2 class="stat-number">
-                              <a href="/deriva-webapps/plot/?config=all-data-summary">
 
                               <span class="stat-number" id="stat-assay-number">
-                                <i class="fas fa-sync-alt fa-spin"></i>
+                                22
                               </span>
 
-                            </a></h2>
+                            </h2>
                             <p class="statistic-label">Assay Types</p>
                         </div>
                     </div>
@@ -91,12 +51,12 @@ custom_js:
                   <div class="statistic-container">
                       <i class="stat-icon fa-solid fa-vial"></i>
                       <div>
-                          <h2 class="stat-number"><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AwpjBFeEesKKK0SegDMA1jgCeIALoBfIQCUAkgBETQrAAsU3XEkoBFALQBNAGwAjACyJqZmQA@sort(RCT::desc::,Stage_Ordinal,RID)">
+                          <h2 class="stat-number">
                             <span class="stat-number" id="stat-specimen-number">
-                              <i class="fas fa-sync-alt fa-spin"></i>
+                              14,320
                             </span>
 
-                          </a></h2>
+                          </h2>
                           <p class="statistic-label">Specimen</p>
                       </div>
                   </div>
@@ -108,11 +68,11 @@ custom_js:
                 <div class="statistic-container">
                     <i class="stat-icon fa-solid fa-microscope"></i>
                     <div>
-                        <h2 class="stat-number"><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBiAAqCIB4+-qbBoQAaAMxUAJqRXr5Uskme7payjIYmyOjYeAigxGRoFAjUtAws7Jw8fMGi4lIyAMKYYES8EPTCRF1oSFq6+sZmVjYg9o7OlACKnvHurgCyucZAA@sort(RCT::desc::,Stage_Ordinal,RID)">
+                        <h2 class="stat-number">
                           <span class="stat-number" id="stat-imaging-number">
-                            <i class="fas fa-sync-alt fa-spin"></i>
+                            12,995
                           </span>
-                        </a></h2>
+                        </h2>
                         <p class="statistic-label">Imaging</p>
                     </div>
                 </div>
@@ -124,12 +84,11 @@ custom_js:
                 <div class="statistic-container">
                     <i class="stat-icon fa-solid fa-dna"></i>
                     <div>
-                        <h2 class="stat-number"><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAaAOrsIACMAGyJ8QDSNF45uQDsiZwAnMUALDlJackATPpGyOjYeLAgAMKYYGKEKBBSYiNoceFRMThxVlQ4ADY4YEh4hoZAA@sort(RMT::desc::,RID)">
+                        <h2 class="stat-number">
                           <span class="stat-number" id="stat-transcriptomics-number">
-                            <i class="fas fa-sync-alt fa-spin"></i>
+                            103
                           </span>
 
-                          </a>
                         </h2>
                         <p class="statistic-label">Transcriptomics</p>
                     </div>
@@ -147,11 +106,11 @@ custom_js:
                   <div class="statistic-container">
                       <i class="stat-icon fa-solid fa-clone"></i>
                       <div>
-                          <h2 class="stat-number"><a href="/resources/cell-lines/">
+                          <h2 class="stat-number">
                             <span class="stat-number" id="stat-cell-lines-number">
-                              <i class="fas fa-sync-alt fa-spin"></i>
+                              18
                             </span>
-                          </a></h2>
+                          </h2>
                           <p class="statistic-label">Cell Lines</p>
                       </div>
                   </div>
@@ -163,11 +122,11 @@ custom_js:
                   <div class="statistic-container">
                       <i class="stat-icon fa-solid fa-list"></i>
                       <div>
-                          <h2 class="stat-number"><a href="/chaise/recordset/#2/Protocol:Protocol@sort(RMT::desc::,RID)">
+                          <h2 class="stat-number">
                             <span class="stat-number" id="stat-protocols-number">
-                            <i class="fas fa-sync-alt fa-spin"></i>
+                            127
                           </span>
-                      </a></h2>
+                      </h2>
                           <p class="statistic-label">Protocols</p>
                       </div>
                   </div>
@@ -179,11 +138,11 @@ custom_js:
                   <div class="statistic-container">
                       <i class="stat-icon fa-solid fa-droplet"></i>
                       <div>
-                          <h2 class="stat-number"><a href="/chaise/recordset/#2/Antibody:Antibody_Tests@sort(RID)">
+                          <h2 class="stat-number">
                             <span class="stat-number" id="stat-antibody-validation-number">
-                              <i class="fas fa-sync-alt fa-spin"></i>
+                              302
                             </span>
-                          </a></h2>
+                          </h2>
                           <p class="statistic-label">Antibody Validation</p>
                       </div>
                   </div>
@@ -195,11 +154,11 @@ custom_js:
                   <div class="statistic-container">
                       <i class="stat-icon fa-solid fa-newspaper"></i>
                       <div>
-                          <h2 class="stat-number"><a href="/chaise/recordset/#2/Common:Publication/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaEABTRIBsBLLMIj0YB9GhFQZBaWsIBmAaxwBPEAF0AvqwBKASQAia1lgAWKPjiSUAigFoAzAGkArABYWIW46cA2Neo1AA@sort(Year::desc::,Month::desc::,RID::desc::)?pcid=navbar/recordset&ppid=23vl276c1oam2l7l2etv1eko">
+                          <h2 class="stat-number">
                             <span class="stat-number" id="stat-pubs-number">
-                              <i class="fas fa-sync-alt fa-spin"></i>
+                              210
                             </span>
-                          </a></h2>
+                          </h2>
                           <p class="statistic-label">Publications</p>
                       </div>
                   </div>
@@ -212,20 +171,20 @@ custom_js:
 <div class="row" id="matrix">
   <h2>Data Types Matrix</h2>
   <p class="center-text">Click a cell or labels along the axes to navigate to the corresponding datasets.<br/>Note that the -omics data numbers indicate Studies which include multiple Experiments with multiple Replicates.</p>
-  <div class="col-12">
-      <iframe name="resources-viewer" id="resources-viewer" style="border-style: none; border-color: inherit; border-width: 0px; width: 100%; height: 760px;" src="/deriva-webapps/matrix/?config=all-data-type-by-species">
-      </iframe>
-  </div>
-</div>
 
+
+    <img src="/assets/img/atlas-data-matrix.png" alt="Data matrix of available data types" width="800px" class="center-block img-responsive">
+
+
+
+</div>
+<!--
 <div class="row" id="shortcuts">
 <h2>Browse these shortcuts for GUDMAP and RBK data<br/>
 <small>Available Species: Human, Mouse and Canine</small></h2>
 <div class="col-md-12">
   <div class="shortcuts">
-<!--
-<small>Over 11,000 records and 4,000 images</small>
--->
+
 
 <div class="row shortcut-links">
 <div class="col-md-4">
@@ -234,10 +193,7 @@ custom_js:
     <li><a href="/chaise/recordset/#2/Common:Gene">Gene</a></li>
     <li><a href="/chaise/recordset/#2/Vocabulary:Anatomy/">Anatomy: Facet Search</a></li>
     <li><a href="/deriva-webapps/treeview/">Anatomy: Tree View</a></li>
-    <!--
-    <li><a href="/deriva-webapps/boolean-search/">Anatomy: Boolean Search</a></li>
-    <li><a href="/chaise/recordset/#2/Common:Principal_Investigator@sort(Person)">Investigator</a></li>
-    -->
+
   </ul>
   <ul>
     <li class="sub-parent">VISUALIZATIONS</li>
@@ -247,7 +203,7 @@ custom_js:
   </ul>
   <ul>
     <li class="sub-parent">DATA COLLECTIONS</li>
-<!--      <li><a href="/chaise/record/#2/Common:Collection/RID=17-3ZHJ">Featured Image Annotations</a></li> -->
+
     <li class="info-label"><a class="tooltiplink" href="/chaise/recordset/#2/Common:Collection/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaalAG3ZyyIEtGA+jQioMfNLQEAzANY4AniAC6AX1YAlAJIARZaywALFL1xJKARQC0AZgDSAVgAsLEFbv2AbMpWqgA@sort(RMT::desc::,RID)">Data Collections <i class="fas fa-info-circle" aria-hidden="true"></i><span>Customized collections of datasets, usually to collect data within a publication.</span></a></li>
   </ul>
 </div>
@@ -287,40 +243,22 @@ custom_js:
 
 
 </div>
-
+-->
 
 <div class="row" id="community">
   <h2>Participating Consortia</h2>
   <div class="col-md-6" id="news-atlas">
-
-    <h3>Upcoming Internal Events</h3>
-
-    <ul class="posts">
-  {% assign current_date = 'now' | date: '%s' %}
-  {% assign sorted_events = site.events | sort: "start_date" %}
-  {% for event in sorted_events %}
-    {% assign event_start_date = event.start_date | date: '%s' %}
-    {% if event_start_date >= current_date %}
-      <li>
-        <a href="{{ event.url }}">{{ event.title }} in {{ event.location }}</a>
-      </li>
-    {% endif %}
-  {% endfor %}
-</ul>
-
+      <div class="consortium">
+        <a href="/gudmap/">
+          <img src="/assets/img/gudmap-horizontal.png" alt="GUDMAP Consortium" class="img-responsive center-block">
+        </a>
+      </div>
 
   </div>
   <div class="col-md-6" id="consortiums">
-  <h3>ReBuilding A Kidney (RBK) and GUDMAP<br/>
-  <small>The ATLAS-D2K Center supports the data and resources of the RBK and GUDMAP Consortiums. Click an image to learn more.</small></h3>
     <div class="consortium">
       <a href="/rebuildingakidney/">
-        <img src="/assets/img/rbk-horizontal.png" alt="RBK Consortium" class="img-responsive">
-      </a>
-    </div>
-    <div class="consortium">
-      <a href="/gudmap/">
-        <img src="/assets/img/gudmap-horizontal.png" alt="GUDMAP Consortium" class="img-responsive">
+        <img src="/assets/img/rbk-horizontal.png" alt="RBK Consortium" class="img-responsive center-block">
       </a>
     </div>
   </div>
@@ -333,85 +271,6 @@ custom_js:
   {% include carousel.html %}
   </div>
 </div>
-
-<div class="row" id="featured-tools">
-  <div class="col-md-12">
-    <h2>Featured Tools</h2>
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img src="/assets/img/home-slides/slide-1.png" alt="...">
-          <div class="carousel-caption">
-            Bulk RNA-Seq Visualization (Violin Plots) <a href="/deriva-webapps/plot/?config=study-violin">Learn more</a>
-          </div>
-        </div>
-        <div class="item">
-          <img src="/assets/img/home-slides/slide-2.png" alt="...">
-          <div class="carousel-caption">
-            UCSC Cell Browser - Single Cell RNA-Seq Visualization <a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEANUKTTABtCALzAAXQiggB9BqLRQAnlIBmAaxwKQAXQC+bUOlFk0FBNXpNWHbrwHCxE6Tb6CR4yVLoAHL4KwOPNQ1tPWoASQARbQ4IFFEpCDR+fjhRDDQcHV0gA@sort(RMT::desc::,RID)?pcid=static/home">Learn more</a>
-          </div>
-        </div>
-        <div class="item">
-          <img src="/assets/img/home-slides/slide-3.png" alt="...">
-          <div class="carousel-caption">
-            K.I.T. - Kidney Interactive Transcriptomics - an online analyzer for kidney single cell <br/>datasets (via the Humphreys Lab of the RBK Consortium) <a href="http://humphreyslab.com/SingleCell/" target="_blank">Learn more</a>
-          </div>
-        </div>
-      </div>
-
-      <!-- Controls -->
-      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
-</div>
-
-<div class="row" id="opps">
-  <h2>Consortia Highlights</h2>
-
-  <div class="col-md-6">
-    <h3>Recent Publications</h3>
-    <ul class="posts">
-      <li><a href="https://doi.org/10.1152/ajpcell.00288.2022">Functional maturation of kidney organoid tubules: PIEZO1-mediated Ca2+ signaling</a> <small><em>(American Physiological Society - Cell Physiology, 2023, RBK)</em></small></li>
-      <li><a href="https://doi.org/10.1681/asn.0000000000000057">Lineage Tracing and Single-Nucleus Multiomics Reveal Novel Features of Adaptive and Maladaptive Repair after Acute Kidney Injury</a> <small><em>(JASN, 2023, RBK)</em></small></li>
-      <li><a href="https://doi.org/10.1016/B978-0-12-823318-4.00037-8">Chapter 18 - Stress-induced senescence of tubular cells</a> <small><em>(Regenerative Nephrology, 2022, RBK)</em></small></li>
-      <li><a href="https://doi.org/10.1016/B978-0-12-823318-4.00019-6">Chapter 32 - Small molecules in regeneration</a> <small><em>(Regenerative Nephrology, 2022, RBK)</em></small></li>
-      <li><a href="/chaise/recordset/#2/Common:Publication/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaEABTRIBsBLLMIj0YB9GhFQZBaWsIBmAaxwBPEAF0AvqwBKASQAia1lgAWKPjiSUAigFoAzAGkArADYWIW46cAWNeo1AA@sort(Year::desc::,Month::desc::,RID::desc::)">more publications ></a></li>
-    </ul>
-  </div>
-  <div class="col-md-6">
-    <h3>Latest News</h3>
-    <ul class="posts">
-      {% for post in site.posts limit: 4 %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a><br/>
-      <time>
-        {{ post.date | date: "%m/%d/%Y" }}
-        </time>
-    </li>
-    {% endfor %}
-    </ul>
-  <a id="more-news" href="/news/">more news ></a><br>
-  <!--    <a href="/publications/">publications ></a> -->
-
-
-  </div>
-</div>
-
 
 
 <script>
